Enhanced transformer first pass;

--- a/src/main/resources/data/dada2018/config.properties
+++ b/src/main/resources/data/dada2018/config.properties
@@ -1,2 +1,4 @@
-phoneticTransformerForwardType=PhonemixAggressive
-phoneticTransformerReverseType=PhonemixAggressive
+# Used for find
+phoneticTransformerForwardType=PhonemixCompacting
+# Used for rhyming
+phoneticTransformerReverseType=PhonemixEnhanced
