--- a/src/main/resources/data/extended2018/config.properties
+++ b/src/main/resources/data/extended2018/config.properties
@@ -1,2 +1,4 @@
+# Used for find
 phoneticTransformerForwardType=PhonemixCompacting
+# Used for rhyming
 phoneticTransformerReverseType=PhonemixEnhanced
